--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,50 +18,24 @@
             android:layout_height="match_parent">
 
             <Button
-                android:id="@+id/button11"
+                android:id="@+id/button1"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:onClick="resetClicked"
+                android:onClick="tileClicked"
                 android:text="Button" />
 
             <Button
-                android:id="@+id/button12"
+                android:id="@+id/button2"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:onClick="resetClicked"
+                android:onClick="tileClicked"
                 android:text="Button" />
 
             <Button
-                android:id="@+id/button10"
+                android:id="@+id/button3"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:onClick="resetClicked"
-                android:text="Button" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <Button
-                android:id="@+id/button14"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:onClick="resetClicked"
-                android:text="Button" />
-
-            <Button
-                android:id="@+id/button15"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:onClick="resetClicked"
-                android:text="Button" />
-
-            <Button
-                android:id="@+id/button13"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:onClick="resetClicked"
+                android:onClick="tileClicked"
                 android:text="Button" />
         </TableRow>
 
@@ -70,32 +44,59 @@
             android:layout_height="match_parent">
 
             <Button
-                android:id="@+id/button18"
+                android:id="@+id/button4"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:onClick="resetClicked"
+                android:onClick="tileClicked"
                 android:text="Button" />
 
             <Button
-                android:id="@+id/button17"
+                android:id="@+id/button5"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:onClick="resetClicked"
+                android:onClick="tileClicked"
                 android:text="Button" />
 
             <Button
-                android:id="@+id/button16"
+                android:id="@+id/button6"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:onClick="resetClicked"
+                android:onClick="tileClicked"
+                android:text="Button" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:id="@+id/button7"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:onClick="tileClicked"
+                android:text="Button" />
+
+            <Button
+                android:id="@+id/button8"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:onClick="tileClicked"
+                android:text="Button" />
+
+            <Button
+                android:id="@+id/button9"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:onClick="tileClicked"
                 android:text="Button" />
         </TableRow>
 
     </TableLayout>
 
     <Button
-        android:id="@+id/button8"
+        android:id="@+id/button10"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:onClick="resetClicked"
+        android:text="Reset" />
 </LinearLayout>
