--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/darker_gray"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
@@ -12,41 +13,62 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="16dp"
-        android:layout_weight="1"
+        android:layout_weight="0"
+        android:background="@android:color/background_light"
         app:columnCount="3">
 
         <Button
             android:id="@+id/button0"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:layout_margin="4dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginTop="0dp"
+            android:background="@android:color/darker_gray"
             android:onClick="tileClicked"
+            android:padding="10dp"
             android:textSize="0sp" />
 
         <Button
             android:id="@+id/button1"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:layout_margin="4dp"
+            android:layout_marginTop="0dp"
+            android:background="@android:color/darker_gray"
             android:onClick="tileClicked"
+            android:padding="10dp"
             android:textSize="0sp" />
 
         <Button
             android:id="@+id/button2"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:layout_margin="4dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginRight="0dp"
+            android:background="@android:color/darker_gray"
             android:onClick="tileClicked"
+            android:padding="10dp"
             android:textSize="0sp" />
 
         <Button
             android:id="@+id/button3"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:layout_margin="4dp"
+            android:layout_marginLeft="0dp"
+            android:background="@android:color/darker_gray"
             android:onClick="tileClicked"
+            android:padding="10dp"
             android:textSize="0sp" />
 
         <Button
             android:id="@+id/button4"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:layout_margin="4dp"
+            android:background="@android:color/darker_gray"
             android:onClick="tileClicked"
             android:textSize="0sp" />
 
@@ -54,28 +76,46 @@
             android:id="@+id/button5"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:layout_margin="4dp"
+            android:layout_marginRight="0dp"
+            android:background="@android:color/darker_gray"
             android:onClick="tileClicked"
+            android:padding="10dp"
             android:textSize="0sp" />
 
         <Button
             android:id="@+id/button6"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:layout_margin="4dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginBottom="0dp"
+            android:background="@android:color/darker_gray"
             android:onClick="tileClicked"
+            android:padding="10dp"
             android:textSize="0sp" />
 
         <Button
             android:id="@+id/button7"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:layout_margin="4dp"
+            android:layout_marginBottom="0dp"
+            android:background="@android:color/darker_gray"
             android:onClick="tileClicked"
+            android:padding="10dp"
             android:textSize="0sp" />
 
         <Button
             android:id="@+id/button8"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:layout_margin="4dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginBottom="0dp"
+            android:background="@android:color/darker_gray"
             android:onClick="tileClicked"
+            android:padding="10dp"
             android:textSize="0sp" />
     </android.support.v7.widget.GridLayout>
 
@@ -84,7 +124,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_margin="20dp"
+        android:background="@android:color/background_light"
         android:onClick="resetClicked"
         android:text="Reset" />
+
+    <TextView
+        android:id="@+id/turnView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="10dp"
+        android:layout_weight="0"
+        android:text="Player x's turn"
+        android:textSize="18sp" />
 
 </LinearLayout>
